--- a/index.html
+++ b/index.html
@@ -1,80 +1,113 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Demon Nodes - High Performance Hosting</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0f0f0f;
-      color: white;
-      text-align: center;
-    }
-    header {
-      padding: 60px 20px;
-      background: linear-gradient(90deg, #ff0000, #8b0000);
-    }
-    h1 {
-      font-size: 40px;
-    }
-    p {
-      font-size: 18px;
-      opacity: 0.8;
-    }
-    .btn {
-      padding: 12px 25px;
-      background: red;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      display: inline-block;
-      margin-top: 20px;
-    }
-    section {
-      padding: 60px 20px;
-    }
-    .box {
-      background: #1a1a1a;
-      padding: 20px;
-      margin: 20px auto;
-      width: 80%;
-      border-radius: 10px;
-    }
-    footer {
-      padding: 20px;
-      background: #111;
-      opacity: 0.7;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Warden Nodes | Premium Hosting</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #0a0505;
+            background-image: radial-gradient(circle at top, #2d140a 0%, #0a0505 100%);
+        }
+        .glass-card {
+            background: rgba(21, 15, 15, 0.8);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+        }
+    </style>
 </head>
-<body>
+<body class="text-white selection:bg-orange-600">
 
-<header>
-  <h1>⚡ Demon Nodes</h1>
-  <p>High Performance Game & VPS Hosting</p>
-  <a href="#" class="btn">Get Started</a>
-</header>
+    <nav class="max-w-7xl mx-auto flex justify-between items-center p-6">
+        <div class="text-2xl font-black tracking-tighter text-orange-600">WARDEN <span class="text-white">NODES</span></div>
+        <div class="hidden md:flex gap-8 text-sm font-medium text-gray-400 uppercase tracking-widest">
+            <a href="#" class="hover:text-white">Home</a>
+            <a href="#" class="hover:text-white">Game Hosting</a>
+            <a href="#" class="hover:text-white">VPS</a>
+            <a href="#" class="hover:text-white">Support</a>
+        </div>
+        <button class="bg-orange-600 hover:bg-orange-700 px-6 py-2 rounded-full text-sm font-bold transition-all shadow-lg shadow-orange-900/20">
+            Login / Sign Up
+        </button>
+    </nav>
 
-<section>
-  <h2>🚀 Our Services</h2>
-  <div class="box">
-    <h3>🎮 Game Hosting</h3>
-    <p>Minecraft, FiveM, CS2 & more with instant setup.</p>
-  </div>
-  <div class="box">
-    <h3>☁ VPS Hosting</h3>
-    <p>Powerful NVMe SSD servers with full root access.</p>
-  </div>
-  <div class="box">
-    <h3>🛡 DDoS Protection</h3>
-    <p>Advanced security & 99.9% uptime guarantee.</p>
-  </div>
-</section>
+    <section class="text-center pt-20 pb-16 px-4">
+        <span class="bg-orange-900/20 border border-orange-500/30 text-orange-500 text-[10px] px-4 py-1.5 rounded-full uppercase font-bold tracking-widest mb-6 inline-block">
+            ✨ Your Ultimate Gaming Partner™
+        </span>
+        <h1 class="text-5xl md:text-7xl font-black mb-6 uppercase leading-none tracking-tighter">
+            HOSTING SOLUTION <br> <span class="text-orange-600">MADE SIMPLE</span>
+        </h1>
+        <p class="max-w-xl mx-auto text-gray-400 text-base md:text-lg mb-10 leading-relaxed">
+            Warden Nodes provides reliable, high-performance hosting built on stability and trust. 
+            Powerful servers at affordable prices without compromise.
+        </p>
+        <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
+            <button class="bg-orange-600 w-full sm:w-auto px-10 py-4 rounded-lg font-black hover:scale-105 transition-transform shadow-xl shadow-orange-900/40 uppercase italic">VPS PLAN</button>
+            <button class="bg-white/5 border border-white/10 w-full sm:w-auto px-10 py-4 rounded-lg font-black hover:bg-white/10 transition-colors uppercase italic">CREATE SERVER</button>
+        </div>
+    </section>
 
-<footer>
-  © 2026 Demon Nodes. All Rights Reserved.
-</footer>
+    <section class="max-w-3xl mx-auto py-16 px-4">
+        <h2 class="text-3xl font-bold text-center mb-10">Why Choose <span class="text-orange-600 text-shadow-glow">Warden Nodes?</span></h2>
+        <div class="space-y-3">
+            <div class="glass-card p-4 rounded-xl flex items-center gap-4 hover:border-orange-600/40 transition-all cursor-default group">
+                <div class="w-6 h-6 rounded-full bg-orange-600/20 flex items-center justify-center text-orange-500 group-hover:bg-orange-600 group-hover:text-white transition-all">✓</div>
+                <span class="font-medium text-gray-300">High-Speed NVMe Storage</span>
+            </div>
+            <div class="glass-card p-4 rounded-xl flex items-center gap-4 hover:border-orange-600/40 transition-all cursor-default group">
+                <div class="w-6 h-6 rounded-full bg-orange-600/20 flex items-center justify-center text-orange-500 group-hover:bg-orange-600 group-hover:text-white transition-all">✓</div>
+                <span class="font-medium text-gray-300">Low Latency Servers (India Location)</span>
+            </div>
+            <div class="glass-card p-4 rounded-xl flex items-center gap-4 hover:border-orange-600/40 transition-all cursor-default group">
+                <div class="w-6 h-6 rounded-full bg-orange-600/20 flex items-center justify-center text-orange-500 group-hover:bg-orange-600 group-hover:text-white transition-all">✓</div>
+                <span class="font-medium text-gray-300">24/7 Discord Support</span>
+            </div>
+        </div>
+    </section>
+
+    <section class="max-w-6xl mx-auto py-20 px-4">
+        <div class="text-center mb-16">
+            <span class="text-orange-600 font-bold uppercase tracking-[0.3em] text-xs">VPS Hosting</span>
+            <h2 class="text-4xl font-black mt-2 uppercase italic tracking-tighter">VPS <span class="text-orange-600">HOSTING PLANS</span></h2>
+        </div>
+        
+        <div class="grid md:grid-cols-3 gap-6">
+            <div class="glass-card p-8 rounded-2xl text-center border-t-2 border-t-blue-500/50">
+                <div class="text-4xl mb-4 font-black italic text-blue-500">intel</div>
+                <h3 class="text-xl font-bold mb-3 uppercase tracking-tight">Intel Platinum</h3>
+                <p class="text-sm text-gray-500 mb-8 leading-relaxed">High-performance & stable VPS powered by Intel Platinum processors.</p>
+                <button class="text-orange-500 font-bold text-sm uppercase tracking-widest hover:text-orange-400 transition">Click to view plans</button>
+            </div>
+
+            <div class="glass-card p-8 rounded-2xl text-center border-2 border-orange-600/50 transform md:scale-110 shadow-2xl shadow-orange-900/20 relative z-10 bg-[#1a0d0a]">
+                <div class="text-4xl mb-4 font-black italic text-red-600">AMD EPYC</div>
+                <h3 class="text-xl font-bold mb-3 uppercase tracking-tight">Enterprise EPYC</h3>
+                <p class="text-sm text-gray-400 mb-8 leading-relaxed">Enterprise-grade AMD EPYC for ultimate VPS server performance.</p>
+                <button class="bg-orange-600 text-white w-full py-3 rounded-lg font-bold text-sm uppercase tracking-widest hover:bg-orange-700 transition">Select Plan</button>
+            </div>
+
+            <div class="glass-card p-8 rounded-2xl text-center opacity-50 relative overflow-hidden border-t-2 border-t-orange-500/30">
+                <div class="text-4xl mb-4 font-black italic text-orange-500">RYZEN 9</div>
+                <h3 class="text-xl font-bold mb-3 uppercase tracking-tight">AMD Ryzen 9</h3>
+                <p class="text-sm text-gray-500 mb-8 leading-relaxed">Ultra-fast single-core performance — coming soon.</p>
+                <span class="absolute top-4 right-4 bg-orange-600 text-[8px] font-black px-2 py-1 rounded uppercase">Coming Soon</span>
+            </div>
+        </div>
+    </section>
+
+    <footer class="border-t border-white/5 bg-black/50 py-12">
+        <div class="max-w-7xl mx-auto px-4 flex flex-wrap justify-center gap-10 text-[10px] font-bold text-gray-500 uppercase tracking-[0.2em]">
+            <div class="flex items-center gap-2"><span>🇮🇳</span> India Node</div>
+            <div class="flex items-center gap-2"><span>⚡</span> Low Latency</div>
+            <div class="flex items-center gap-2"><span>🔐</span> Full Root Access</div>
+            <div class="flex items-center gap-2"><span>🚀</span> NVMe SSD</div>
+        </div>
+    </footer>
 
 </body>
 </html>
+
