--- a/index.html
+++ b/index.html
@@ -3,111 +3,153 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warden Nodes | Premium Hosting</title>
+    <title>HostCloud | Premium Web Hosting</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #0a0505;
-            background-image: radial-gradient(circle at top, #2d140a 0%, #0a0505 100%);
+        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #0d0121; }
+        .hero-gradient {
+            background: radial-gradient(circle at 50% -20%, #2e1065 0%, #0d0121 80%);
         }
-        .glass-card {
-            background: rgba(21, 15, 15, 0.8);
-            border: 1px solid rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
+        .host-card {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
+        }
+        .host-card:hover {
+            border-color: #8b5cf6;
+            transform: translateY(-5px);
+            background: rgba(255, 255, 255, 0.05);
         }
     </style>
 </head>
-<body class="text-white selection:bg-orange-600">
+<body class="text-slate-200">
 
-    <nav class="max-w-7xl mx-auto flex justify-between items-center p-6">
-        <div class="text-2xl font-black tracking-tighter text-orange-600">WARDEN <span class="text-white">NODES</span></div>
-        <div class="hidden md:flex gap-8 text-sm font-medium text-gray-400 uppercase tracking-widest">
-            <a href="#" class="hover:text-white">Home</a>
-            <a href="#" class="hover:text-white">Game Hosting</a>
-            <a href="#" class="hover:text-white">VPS</a>
-            <a href="#" class="hover:text-white">Support</a>
+    <nav class="flex justify-between items-center px-8 py-6 max-w-7xl mx-auto">
+        <div class="flex items-center gap-2">
+            <div class="bg-violet-600 p-2 rounded-lg">
+                <i data-lucide="cloud" class="text-white w-6 h-6"></i>
+            </div>
+            <span class="text-2xl font-extrabold tracking-tight text-white">Host<span class="text-violet-500">Cloud</span></span>
         </div>
-        <button class="bg-orange-600 hover:bg-orange-700 px-6 py-2 rounded-full text-sm font-bold transition-all shadow-lg shadow-orange-900/20">
-            Login / Sign Up
+        <div class="hidden md:flex gap-8 font-medium text-slate-400">
+            <a href="#" class="hover:text-violet-400 transition">Hosting</a>
+            <a href="#" class="hover:text-violet-400 transition">VPS</a>
+            <a href="#" class="hover:text-violet-400 transition">Email</a>
+            <a href="#" class="hover:text-violet-400 transition">Domain</a>
+        </div>
+        <button class="border border-violet-500 text-violet-400 px-6 py-2 rounded-full font-bold hover:bg-violet-600 hover:text-white transition">
+            Log In
         </button>
     </nav>
 
-    <section class="text-center pt-20 pb-16 px-4">
-        <span class="bg-orange-900/20 border border-orange-500/30 text-orange-500 text-[10px] px-4 py-1.5 rounded-full uppercase font-bold tracking-widest mb-6 inline-block">
-            ✨ Your Ultimate Gaming Partner™
-        </span>
-        <h1 class="text-5xl md:text-7xl font-black mb-6 uppercase leading-none tracking-tighter">
-            HOSTING SOLUTION <br> <span class="text-orange-600">MADE SIMPLE</span>
-        </h1>
-        <p class="max-w-xl mx-auto text-gray-400 text-base md:text-lg mb-10 leading-relaxed">
-            Warden Nodes provides reliable, high-performance hosting built on stability and trust. 
-            Powerful servers at affordable prices without compromise.
-        </p>
-        <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-            <button class="bg-orange-600 w-full sm:w-auto px-10 py-4 rounded-lg font-black hover:scale-105 transition-transform shadow-xl shadow-orange-900/40 uppercase italic">VPS PLAN</button>
-            <button class="bg-white/5 border border-white/10 w-full sm:w-auto px-10 py-4 rounded-lg font-black hover:bg-white/10 transition-colors uppercase italic">CREATE SERVER</button>
-        </div>
-    </section>
-
-    <section class="max-w-3xl mx-auto py-16 px-4">
-        <h2 class="text-3xl font-bold text-center mb-10">Why Choose <span class="text-orange-600 text-shadow-glow">Warden Nodes?</span></h2>
-        <div class="space-y-3">
-            <div class="glass-card p-4 rounded-xl flex items-center gap-4 hover:border-orange-600/40 transition-all cursor-default group">
-                <div class="w-6 h-6 rounded-full bg-orange-600/20 flex items-center justify-center text-orange-500 group-hover:bg-orange-600 group-hover:text-white transition-all">✓</div>
-                <span class="font-medium text-gray-300">High-Speed NVMe Storage</span>
-            </div>
-            <div class="glass-card p-4 rounded-xl flex items-center gap-4 hover:border-orange-600/40 transition-all cursor-default group">
-                <div class="w-6 h-6 rounded-full bg-orange-600/20 flex items-center justify-center text-orange-500 group-hover:bg-orange-600 group-hover:text-white transition-all">✓</div>
-                <span class="font-medium text-gray-300">Low Latency Servers (India Location)</span>
-            </div>
-            <div class="glass-card p-4 rounded-xl flex items-center gap-4 hover:border-orange-600/40 transition-all cursor-default group">
-                <div class="w-6 h-6 rounded-full bg-orange-600/20 flex items-center justify-center text-orange-500 group-hover:bg-orange-600 group-hover:text-white transition-all">✓</div>
-                <span class="font-medium text-gray-300">24/7 Discord Support</span>
+    <section class="hero-gradient pt-20 pb-32 px-4 text-center">
+        <div class="max-w-4xl mx-auto">
+            <h1 class="text-5xl md:text-7xl font-extrabold text-white mb-6 leading-tight">
+                Everything You Need to <br> <span class="text-violet-500">Create a Website</span>
+            </h1>
+            <p class="text-lg text-slate-400 mb-10 max-w-2xl mx-auto">
+                Up to 75% off Website Hosting. Get a free domain, easy website setup, and 24/7 customer support.
+            </p>
+            <div class="flex flex-col md:flex-row justify-center items-center gap-4">
+                <button class="bg-violet-600 hover:bg-violet-700 text-white text-lg font-bold px-10 py-4 rounded-xl shadow-lg shadow-violet-900/40 transition-all w-full md:w-auto">
+                    Claim Deal
+                </button>
+                <div class="flex items-center gap-2 text-sm text-slate-400">
+                    <i data-lucide="check-circle" class="w-4 h-4 text-green-500"></i>
+                    30-Day Money-Back Guarantee
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="max-w-6xl mx-auto py-20 px-4">
-        <div class="text-center mb-16">
-            <span class="text-orange-600 font-bold uppercase tracking-[0.3em] text-xs">VPS Hosting</span>
-            <h2 class="text-4xl font-black mt-2 uppercase italic tracking-tighter">VPS <span class="text-orange-600">HOSTING PLANS</span></h2>
+    <section class="max-w-7xl mx-auto px-6 -mt-20">
+        <div class="grid md:grid-cols-3 gap-8">
+            
+            <div class="host-card p-8 rounded-3xl">
+                <h3 class="text-xl font-bold mb-2">Single</h3>
+                <p class="text-slate-500 text-sm mb-6">Ideal solution for beginners.</p>
+                <div class="mb-6">
+                    <span class="text-4xl font-black text-white">₹69.00</span>
+                    <span class="text-slate-500 text-sm">/mo</span>
+                </div>
+                <button class="w-full py-3 rounded-xl border border-slate-700 font-bold hover:bg-slate-800 transition mb-8">Choose Plan</button>
+                <ul class="space-y-4 text-sm text-slate-400">
+                    <li class="flex items-center gap-3"><i data-lucide="check" class="w-4 h-4 text-violet-500"></i> 1 Website</li>
+                    <li class="flex items-center gap-3"><i data-lucide="check" class="w-4 h-4 text-violet-500"></i> 50 GB SSD Storage</li>
+                    <li class="flex items-center gap-3"><i data-lucide="x" class="w-4 h-4 text-slate-600"></i> Free Domain</li>
+                </ul>
+            </div>
+
+            <div class="host-card p-8 rounded-3xl border-violet-500 ring-2 ring-violet-500/20 relative overflow-hidden bg-slate-900/40">
+                <div class="absolute top-0 right-0 bg-violet-600 text-[10px] font-black px-4 py-1 uppercase rounded-bl-xl tracking-widest text-white">Best Value</div>
+                <h3 class="text-xl font-bold mb-2">Business</h3>
+                <p class="text-slate-400 text-sm mb-6">Level up with more power.</p>
+                <div class="mb-6">
+                    <span class="text-4xl font-black text-white">₹249.00</span>
+                    <span class="text-slate-500 text-sm">/mo</span>
+                </div>
+                <button class="w-full py-3 rounded-xl bg-violet-600 text-white font-bold hover:bg-violet-700 transition mb-8 shadow-lg shadow-violet-900/40">Choose Plan</button>
+                <ul class="space-y-4 text-sm text-slate-300">
+                    <li class="flex items-center gap-3"><i data-lucide="check" class="w-4 h-4 text-violet-500"></i> 100 Websites</li>
+                    <li class="flex items-center gap-3"><i data-lucide="check" class="w-4 h-4 text-violet-500"></i> 200 GB NVMe Storage</li>
+                    <li class="flex items-center gap-3"><i data-lucide="check" class="w-4 h-4 text-violet-500"></i> Free Domain (₹799 value)</li>
+                    <li class="flex items-center gap-3"><i data-lucide="check" class="w-4 h-4 text-violet-500"></i> Daily Backups</li>
+                </ul>
+            </div>
+
+            <div class="host-card p-8 rounded-3xl">
+                <h3 class="text-xl font-bold mb-2">Cloud Startup</h3>
+                <p class="text-slate-500 text-sm mb-6">Enjoy optimized performance.</p>
+                <div class="mb-6">
+                    <span class="text-4xl font-black text-white">₹699.00</span>
+                    <span class="text-slate-500 text-sm">/mo</span>
+                </div>
+                <button class="w-full py-3 rounded-xl border border-slate-700 font-bold hover:bg-slate-800 transition mb-8">Choose Plan</button>
+                <ul class="space-y-4 text-sm text-slate-400">
+                    <li class="flex items-center gap-3"><i data-lucide="check" class="w-4 h-4 text-violet-500"></i> 300 Websites</li>
+                    <li class="flex items-center gap-3"><i data-lucide="check" class="w-4 h-4 text-violet-500"></i> 200 GB NVMe Storage</li>
+                    <li class="flex items-center gap-3"><i data-lucide="check" class="w-4 h-4 text-violet-500"></i> Dedicated IP Address</li>
+                </ul>
+            </div>
+
         </div>
-        
-        <div class="grid md:grid-cols-3 gap-6">
-            <div class="glass-card p-8 rounded-2xl text-center border-t-2 border-t-blue-500/50">
-                <div class="text-4xl mb-4 font-black italic text-blue-500">intel</div>
-                <h3 class="text-xl font-bold mb-3 uppercase tracking-tight">Intel Platinum</h3>
-                <p class="text-sm text-gray-500 mb-8 leading-relaxed">High-performance & stable VPS powered by Intel Platinum processors.</p>
-                <button class="text-orange-500 font-bold text-sm uppercase tracking-widest hover:text-orange-400 transition">Click to view plans</button>
-            </div>
+    </section>
 
-            <div class="glass-card p-8 rounded-2xl text-center border-2 border-orange-600/50 transform md:scale-110 shadow-2xl shadow-orange-900/20 relative z-10 bg-[#1a0d0a]">
-                <div class="text-4xl mb-4 font-black italic text-red-600">AMD EPYC</div>
-                <h3 class="text-xl font-bold mb-3 uppercase tracking-tight">Enterprise EPYC</h3>
-                <p class="text-sm text-gray-400 mb-8 leading-relaxed">Enterprise-grade AMD EPYC for ultimate VPS server performance.</p>
-                <button class="bg-orange-600 text-white w-full py-3 rounded-lg font-bold text-sm uppercase tracking-widest hover:bg-orange-700 transition">Select Plan</button>
+    <section class="max-w-7xl mx-auto px-6 py-32">
+        <h2 class="text-4xl font-extrabold text-center mb-16 text-white">Professional Features</h2>
+        <div class="grid md:grid-cols-4 gap-8">
+            <div class="text-center p-6">
+                <i data-lucide="zap" class="w-10 h-10 text-violet-500 mx-auto mb-4"></i>
+                <h4 class="font-bold mb-2">Max Performance</h4>
+                <p class="text-sm text-slate-500">Litespeed web servers for 10x speed.</p>
             </div>
-
-            <div class="glass-card p-8 rounded-2xl text-center opacity-50 relative overflow-hidden border-t-2 border-t-orange-500/30">
-                <div class="text-4xl mb-4 font-black italic text-orange-500">RYZEN 9</div>
-                <h3 class="text-xl font-bold mb-3 uppercase tracking-tight">AMD Ryzen 9</h3>
-                <p class="text-sm text-gray-500 mb-8 leading-relaxed">Ultra-fast single-core performance — coming soon.</p>
-                <span class="absolute top-4 right-4 bg-orange-600 text-[8px] font-black px-2 py-1 rounded uppercase">Coming Soon</span>
+            <div class="text-center p-6">
+                <i data-lucide="shield-check" class="w-10 h-10 text-violet-500 mx-auto mb-4"></i>
+                <h4 class="font-bold mb-2">Advanced Security</h4>
+                <p class="text-sm text-slate-500">Free SSL and DDoS protection.</p>
+            </div>
+            <div class="text-center p-6">
+                <i data-lucide="headset" class="w-10 h-10 text-violet-500 mx-auto mb-4"></i>
+                <h4 class="font-bold mb-2">24/7 Support</h4>
+                <p class="text-sm text-slate-500">Expert help whenever you need it.</p>
+            </div>
+            <div class="text-center p-6">
+                <i data-lucide="mouse-pointer-2" class="w-10 h-10 text-violet-500 mx-auto mb-4"></i>
+                <h4 class="font-bold mb-2">Easy Setup</h4>
+                <p class="text-sm text-slate-500">1-click WordPress installation.</p>
             </div>
         </div>
     </section>
 
-    <footer class="border-t border-white/5 bg-black/50 py-12">
-        <div class="max-w-7xl mx-auto px-4 flex flex-wrap justify-center gap-10 text-[10px] font-bold text-gray-500 uppercase tracking-[0.2em]">
-            <div class="flex items-center gap-2"><span>🇮🇳</span> India Node</div>
-            <div class="flex items-center gap-2"><span>⚡</span> Low Latency</div>
-            <div class="flex items-center gap-2"><span>🔐</span> Full Root Access</div>
-            <div class="flex items-center gap-2"><span>🚀</span> NVMe SSD</div>
-        </div>
+    <footer class="bg-black/50 py-12 text-center text-slate-500 text-sm border-t border-slate-900">
+        <p>© 2026 HostCloud Global. All rights reserved.</p>
     </footer>
 
+    <script>
+        // Initialize Lucide icons
+        lucide.createIcons();
+    </script>
 </body>
 </html>
-
